--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "pages:build": "next build && npx @cloudflare/next-on-pages",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.90.1",
-    "next": "^14.2.0",
+    "next": "^15.4.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.5.0",
-    "react-router-dom": "^7.12.0"
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.13.16",
